# obs-text-pthread

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml
.github/workflows/: build.yml  clang-format.yml  main.yml
ci/: forum-update-info.json  plugin.spec
ci/linux/: install-dependencies-ubuntu.sh  package-ubuntu.sh
ci/macos/: build-macos.sh  build-pango.sh  change-rpath.sh  install-dependencies-macos.sh  install-pango-arm64.sh  install-pango-x86_64.sh  package-macos.sh  test-dylib.sh
ci/windows/: download-pango.cmd  glib-meson.patch  glib-nolibintl.patch  glib-nozlib.patch  package-windows.cmd  prepare-glib.cmd  prepare-meson.cmd  prepare-pango.cmd  setup-pango.sh  vcpkg-pango-base.patch
cmake/: FindPango.cmake
data/: textalpha.effect
data/locale/: en-US.ini
doc/: properties.md
installer/: installer-Windows.iss.in
packaging/debian/: changelog  control  copyright
packaging/fedora/: obs-studio-plugin-text-pthread.spec
src/: obs-text-pthread-main.c  obs-text-pthread-thread.c  obs-text-pthread.h  plugin-macros.h.in
tools/: list2mlt.py
